[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libloader"
version = "1.4.2"
authors = [
    {name = "Christopher Toth", email = "q@q-continuum.net"},
]
description = "Quickly and easily load shared libraries on various platforms. Also includes a libloader.com module for loading com modules on Windows."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
dependencies = [
    "pywin32; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "types-pywin32<310.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "F403",  # Allow wildcard imports in __init__.py for public API
]

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "error"
reportMissingTypeStubs = false
reportMissingImports = "error"
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
exclude = [
    "**/__pycache__",
    "**/.git",
    "**/build",
    "**/dist",
]
